[package]
name = "bars"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[profile.dev]
lto = "fat"

[dependencies]
libm = { version = "0.2.8", optional = true }
