[package]
name = "fft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
unwind = "abort"
strip = true
#overflow-checks = false

[profile.dev]
lto = "fat"

[dependencies]


[features]
default = []          # no feature on by default
safe = []
unsf = []

[workspace]
