[package]
name = "gmmrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[profile.release]
lto = "fat"
debug = true
strip = "none"
opt-level = 1

[profile.dev]
lto = "fat"

[dependencies]
libm = "0.2.8"
