[package]
name = "lstm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["lib"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
unwind = "abort"
strip = true
#overflow-checks = false

[profile.dev]
lto = "fat"
