[package]
name = "ode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]


[profile.release]
lto = "fat"
opt-level = 3
#debug = true
#strip = "none"

[profile.dev]
lto = "fat"

[dependencies]
